tests/machine/x/go/group_items_iteration.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_items_iteration.go:56:23: x.Val undefined (type any has no field or method Val)
tests/machine/x/go/group_items_iteration.go:58:21: undefined: v
